@@ -4,6 +4,7 @@
 * Apply patch #6509, parallel implementation of #get_multi.  Submitted
   by Tyler Kovacs.
 * Validate keys.  Disallow spaces in keys or keys that are too long.
+* Perform more validation of server responses.
 * Add #incr and #decr.
 * Add raw argument to #set and #get to retrieve #incr and #decr
   values.
